--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "dev": "vite",
     "build": "node node_modules/vite/bin/vite.js build",
-    "preview": "vite preview",
-    "lint": "eslint ."
+    "preview": "vite preview"
   },
 
   "engines": {
-    "node": "18.x"
+    "node": "24.x"
   },
 
   "dependencies": {
@@ -22,14 +21,7 @@
   },
 
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
     "vite": "^5.4.8"
   }
 }
